--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -w",
-    "start": "node program.js"
+    "start": "node ./dist/program.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-status": "^1.3.1",
     "mongoose": "^5.4.12",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/http-status": "^0.2.30",
     "@types/mongoose": "^5.3.17",
