--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-status": "^1.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.12",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3"
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.3.17",
     "@types/node": "^11.9.4"
   }
