--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-status": "^1.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.12",
+    "multer": "^1.4.1",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3"
   },
@@ -28,6 +29,7 @@
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.3.17",
+    "@types/multer": "^1.3.7",
     "@types/node": "^11.9.4"
   }
 }
