--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register/ tests/*.spec.ts",
     "compile": "tsc -w",
     "start": "node ./dist/program.js"
   },
@@ -19,17 +19,21 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.12",
     "multer": "^1.4.1",
-    "ts-node": "^8.0.2",
     "typescript": "^3.3.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.7",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/mocha": "^5.2.6",
     "@types/mongoose": "^5.3.17",
     "@types/multer": "^1.3.7",
-    "@types/node": "^11.9.4"
+    "@types/node": "^11.9.4",
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "ts-node": "^8.0.2"
   }
 }
